--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -21,6 +21,7 @@ body{
 }
 img{
     width: 100%;
+    height: 80vh;
 }
 .container{
     display: flex;
@@ -111,6 +112,7 @@ img{
 }
 .content .container-action .abouts-container .content-action{
     order: 2;
+    margin-left: 2em;
 }
 .content .container-action .abouts-container img{
     width: 100%;
@@ -122,26 +124,24 @@ img{
     display: flex;
     align-items: center;
     color: var(--color-text-blue);
-    margin: 1.3em 2em;
+    margin: 1.3em 0;
 }
 .content .container-action .abouts-container h3::before{
     content: '';
     display: flex;
     flex-direction: column;
     width: 2em;
-    height: 2px;
-    margin: 0 8px;
+    height: 3px;
+    margin: 0 12px;
     background-color: var(--color-text-blue);
 }
 .content .container-action .abouts-container h2{
     font-size: 3em;
-    margin: 0 .75em;
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .abouts-container p{
-    font-size: 1.2em;
-    margin: .85em 1.5em;
+    font-size: 1.1em;
     text-transform: capitalize;
 }
 .content .container-action .abouts-container a{
@@ -154,7 +154,7 @@ img{
     font-size: 1.4em;
     width: 8em;
     font-weight: 800;
-    margin: .90em 1.4em;
+    margin: .90em 0;
 }
 
 
@@ -168,6 +168,7 @@ img{
 }
 .content .container-action .features-container .content-action{
     order: 2;
+    margin-left: 2em;
 }
 .content .container-action .features-container img{
     width: 100%;
@@ -179,26 +180,24 @@ img{
     display: flex;
     align-items: center;
     color: var(--color-texte-yellow);
-    margin: 1.3em 2em;
+    margin: 1.3em 0;
 }
 .content .container-action .features-container h3::before{
     content: '';
     display: flex;
     flex-direction: column;
     width: 2em;
-    height: 2px;
-    margin: 0 8px;
+    height: 3px;
+    margin: 0 12px;
     background-color: var(--color-texte-yellow);
 }
 .content .container-action .features-container h2{
     font-size: 3em;
-    margin: 0 .75em;
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .features-container p{
     font-size: 1.2em;
-    margin: .85em 1.5em;
     text-transform: capitalize;
 }
 .content .container-action .features-container a{
@@ -211,7 +210,7 @@ img{
     font-size: 1.4em;
     width: 8em;
     font-weight: 800;
-    margin: .90em 1.4em;
+    margin: .90em 0;
 }
 
 
@@ -221,6 +220,7 @@ img{
 }
 .content .container-action .desing-container .content-action{
     order: 2;
+    margin-left: 2em;
 }
 .content .container-action .desing-container img{
     width: 100%;
@@ -232,26 +232,24 @@ img{
     display: flex;
     align-items: center;
     color: var(--color-text-purple);
-    margin: 1.3em 2em;
+    margin: 1.3em 0;
 }
 .content .container-action .desing-container h3::before{
     content: '';
     display: flex;
     flex-direction: column;
     width: 2em;
-    height: 2px;
-    margin: 0 8px;
+    height: 3px;
     background-color: var(--color-text-purple);
 }
 .content .container-action .desing-container h2{
     font-size: 3em;
-    margin: 0 .75em;
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .desing-container p{
     font-size: 1.2em;
-    margin: .85em 1.5em;
+    margin: .85em 0;
     text-transform: capitalize;
 }
 .content .container-action .desing-container a{
@@ -264,5 +262,5 @@ img{
     font-size: 1.4em;
     width: 8em;
     font-weight: 800;
-    margin: .90em 1.4em;
+    margin: .90em 0;
 }
