--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -21,14 +21,16 @@ body{
 }
 img{
     width: 100%;
-    height: 80vh;
     object-fit: cover;
+}
+.span{
+    color: #f6d427;
 }
 .container{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: linear-gradient(45deg,rgba(0, 0, 0, 0.236),rgba(75, 75, 75, 0.185)),url('../../imagem/fundoBG.jpg');
+    background-image: linear-gradient(45deg,rgba(0, 0, 0, 0.468),rgba(75, 75, 75, 0.308)),url('../../imagem/fundoBG.jpg');
     background-position: center;
     background-size: cover;
 }
@@ -46,7 +48,7 @@ img{
     text-decoration: none;
     font-size: 1.80em;
     font-weight: 800;
-    color: #564f4f;
+    color: var(--color-Text);
 }
 .container .navgatior .navMobile{
     display: flex;
@@ -91,6 +93,7 @@ img{
 }
 .container .contentHeader h1{
     padding: var(--padding-button);
+    font-size: 2.5em;
 }
 .container .navgatior .menu-burguer{
     padding-right: var(--padding-spacing);
