--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 :root{
@@ -25,6 +25,12 @@ img{
 }
 .span{
     color: #f6d427;
+}
+p{
+    font-weight: lighter;
+    color: rgb(145, 145, 145);
+    line-height: 1.2;
+    letter-spacing: 1.2px;
 }
 .container{
     display: flex;
@@ -156,7 +162,7 @@ img{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.4em;
-    width: 8em;
+    width: 9em;
     font-weight: 800;
     margin: .90em 0;
 }
@@ -212,7 +218,7 @@ img{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.4em;
-    width: 8em;
+    width: 9em;
     font-weight: 800;
     margin: .90em 0;
 }
@@ -244,6 +250,7 @@ img{
     flex-direction: column;
     width: 2em;
     height: 3px;
+    margin: 0 12px;
     background-color: var(--color-text-purple);
 }
 .content .container-action .desing-container h2{
@@ -264,7 +271,7 @@ img{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.4em;
-    width: 8em;
+    width: 9em;
     font-weight: 800;
     margin: .90em 0;
 }
