--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,9 +1,12 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',sans-serif;
 }
 
 :root{
@@ -29,7 +32,7 @@ img{
 }
 p{
     font-weight: lighter;
-    color: rgb(145, 145, 145);
+    color: rgb(87, 87, 87);
     line-height: 1.2;
     letter-spacing: 1.2px;
 }
@@ -100,7 +103,7 @@ p{
 }
 .container .contentHeader h1{
     padding: var(--padding-button);
-    font-size: 2.5em;
+    font-size: clamp(1.8em,2.5vw,4em);
 }
 .container .navgatior .menu-burguer{
     padding-right: var(--padding-spacing);
@@ -118,8 +121,8 @@ p{
     width: 100%;
 }
 .content .container-action .abouts-container{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
+    display: flex;
+    flex-direction: column;
 }
 .content .container-action .abouts-container .content-action{
     order: 2;
@@ -147,7 +150,7 @@ p{
     background-color: var(--color-text-blue);
 }
 .content .container-action .abouts-container h2{
-    font-size: 3em;
+    font-size: clamp(1.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
@@ -155,8 +158,11 @@ p{
     font-size: 1.1em;
     text-transform: capitalize;
 }
+.content .container-action .abouts-container .btn{
+    margin: 2em 0;
+}
 .content .container-action .abouts-container a{
-    display: flex;
+    display: inline;
     padding: var(--padding-button);
     color: #564f4f;
     border: 3px solid var(--color-text-blue);
@@ -165,7 +171,6 @@ p{
     font-size: 1.4em;
     width: 9em;
     font-weight: 800;
-    margin: .90em 0;
 }
 
 
@@ -203,7 +208,7 @@ p{
     background-color: var(--color-texte-yellow);
 }
 .content .container-action .features-container h2{
-    font-size: 3em;
+    font-size: clamp(1.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
@@ -211,8 +216,11 @@ p{
     font-size: 1.2em;
     text-transform: capitalize;
 }
+.content .container-action .features-container .btn{
+    margin: 2em 0;
+}
 .content .container-action .features-container a{
-    display: flex;
+    display: inline;
     padding: var(--padding-button);
     color: #564f4f;
     border: 3px solid var(--color-texte-yellow);
@@ -221,7 +229,6 @@ p{
     font-size: 1.4em;
     width: 9em;
     font-weight: 800;
-    margin: .90em 0;
 }
 
 
@@ -238,7 +245,7 @@ p{
     order: 1;
 }
 .content .container-action .desing-container h3{
-    font-size: 1.20em;
+    font-size: clamp(1.8em,2.5vw,2.8em);
     text-transform: uppercase;
     display: flex;
     align-items: center;
@@ -255,7 +262,7 @@ p{
     background-color: var(--color-text-purple);
 }
 .content .container-action .desing-container h2{
-    font-size: 3em;
+    font-size: clamp(1.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
@@ -264,8 +271,11 @@ p{
     margin: .85em 0;
     text-transform: capitalize;
 }
+.content .container-action .desing-container .btn{
+    margin: 2em 0;
+}
 .content .container-action .desing-container a{
-    display: flex;
+    display: inline;
     padding: var(--padding-button);
     color: #564f4f;
     border: 3px solid var(--color-text-purple);
@@ -274,5 +284,5 @@ p{
     font-size: 1.4em;
     width: 9em;
     font-weight: 800;
-    margin: .90em 0;
 }
+
