--- a/assest/css/breakPoint.css
+++ b/assest/css/breakPoint.css
@@ -1,7 +1,10 @@
 @charset "UTF-8";
 
-@media screen and (min-width:760px){
-    
+@media screen and (min-width:790px){
+    img{
+        width: 100%;
+        height: 100%;
+    }
     .container .contentHeader h1{
         padding: var(--padding-button);
         font-size: clamp(3.5em,4.5vw,4.8em);
@@ -10,10 +13,12 @@
     .content .container-action .abouts-container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        align-items: center;
-        justify-content: center;
+        height: 500px;
     }
-    .content .container-action .abouts-container  img{
+    .content .container-action .abouts-container .content-action{
+        margin-top: 40px;
+    }
+    .content .container-action .abouts-container img{
         width: 100%;
         height: 500px;
         object-fit: cover;
@@ -21,37 +26,35 @@
     .content .container-action .features-container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        align-items: center;
-        justify-content: center;
+        height: 5
+        00px;
+        background-color: rgba(225, 0, 255, 0);
     }
     .content .container-action .features-container img{
         width: 100%;
-        order: 2;
+        height: 600px;
         object-fit: cover;
-    }
-    .content .container-action .features-container .content-action{
-        order: 1;
-        margin-left: 2em;
-    }
-    .content .container-action .features-container img{
-        height: 500px;
     }
     .content .container-action .desing-container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        align-items: center;
-        justify-content: center;
+        height: 600px;
+    }
+    .content .container-action .desing-container .content-action h3{
+        padding: 1.8em 0;
+        box-sizing: border-box;
+    }
+    .content .container-action .desing-container .content-action .btn a{
+        margin-bottom: 20px;
     }
     .content .container-action .desing-container img{
-        height: 500px;
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
     }
-    .content .container-action .desing-container h2{
-        font-size: 3.2em;
-    }
-    .content .container-action .features-container h2{
-        font-size: 3.2em;
-    }
-    .content .container-action .abouts-container h2{
-        font-size: 3.2em;
+
+    .content .container-images{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
     }
 }
