--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -1,12 +1,11 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;700&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Oswald',sans-serif;
 }
 
 :root{
@@ -120,47 +119,45 @@ p{
 .content .container-action{
     width: 100%;
 }
-.content .container-action .abouts-container{
-    display: flex;
-    flex-direction: column;
-}
 .content .container-action .abouts-container .content-action{
-    order: 2;
     margin-left: 2em;
 }
 .content .container-action .abouts-container img{
     width: 100%;
-    order: 1;
 }
-.content .container-action .abouts-container h3{
+.content .container-action .abouts-container .content-action h3{
     font-size: 1.20em;
     text-transform: uppercase;
     display: flex;
     align-items: center;
     color: var(--color-text-blue);
     margin: 1.3em 0;
+    font-weight: 500;
+    letter-spacing: 1.5px;
 }
 .content .container-action .abouts-container h3::before{
     content: '';
     display: flex;
     flex-direction: column;
-    width: 2em;
+    width: 3em;
     height: 3px;
     margin: 0 12px;
     background-color: var(--color-text-blue);
 }
 .content .container-action .abouts-container h2{
-    font-size: clamp(1.8em,2.5vw,2.8em);
+    font-size: clamp(2.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .abouts-container p{
-    font-size: 1.1em;
-    text-transform: capitalize;
+    font-size: clamp(1.2em,1.5vw,2.8em);
     padding: .85em 0;
+    line-height: 1.5;
+    width: 85%;
 }
 .content .container-action .abouts-container .btn{
-    margin: 2em 0;
+    margin-top: calc(3em - 20px);
+    margin-bottom: 4em;
 }
 .content .container-action .abouts-container a{
     display: inline;
@@ -171,11 +168,8 @@ p{
     text-transform: uppercase;
     font-size: 1.4em;
     width: 9em;
-    font-weight: 800;
+    font-weight: 700;
 }
-
-
-
 
 
 
@@ -203,23 +197,26 @@ p{
     content: '';
     display: flex;
     flex-direction: column;
-    width: 2em;
+    width: 3em;
     height: 3px;
     margin: 0 12px;
     background-color: var(--color-texte-yellow);
 }
 .content .container-action .features-container h2{
-    font-size: clamp(1.8em,2.5vw,2.8em);
+    font-size: clamp(2.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .features-container p{
-    font-size: 1.2em;
+    font-size: clamp(1.2em,1.5vw,2.8em);
     text-transform: capitalize;
     padding: .85em 0;
+    line-height:1.5;
+    width: 85%;
 }
 .content .container-action .features-container .btn{
-    margin: 2em 0;
+    margin-top: calc(3em - 20px);
+    margin-bottom: 4em;
 }
 .content .container-action .features-container a{
     display: inline;
@@ -230,7 +227,7 @@ p{
     text-transform: uppercase;
     font-size: 1.4em;
     width: 9em;
-    font-weight: 800;
+    font-weight: 700;
 }
 
 
@@ -251,30 +248,32 @@ p{
     display: flex;
     align-items: center;
     color: var(--color-text-purple);
-    margin: 1.3em 0;
+    padding: 1.4em 0;
 }
 .content .container-action .desing-container h3::before{
     content: '';
     display: flex;
     flex-direction: column;
-    width: 2em;
+    width: 3em;
     height: 3px;
     margin: 0 12px;
     background-color: var(--color-text-purple);
 }
 .content .container-action .desing-container h2{
-    font-size: clamp(1.8em,2.5vw,2.8em);
+    font-size: clamp(2.8em,2.5vw,2.8em);
     text-transform: capitalize;
     font-weight: 800;
 }
 .content .container-action .desing-container p{
-    font-size: 1.2em;
-    margin: .85em 0;
+    font-size: clamp(1.2em,1.5vw,2.8em);
     text-transform: capitalize;
     padding: .85em 0;
+    line-height: 1.5;
+    width: 85%;
 }
 .content .container-action .desing-container .btn{
-    margin: 2em 0;
+    margin-top: calc(3em - 20px);
+    margin-bottom: 4em;
 }
 .content .container-action .desing-container a{
     display: inline;
@@ -285,6 +284,23 @@ p{
     text-transform: uppercase;
     font-size: 1.4em;
     width: 9em;
-    font-weight: 800;
+    font-weight: 700;
+}
+
+.content .container-images{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+}
+.content .container-images .card{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   margin: 0 auto;
+}
+.content .container-images .card img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
