--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -27,7 +27,7 @@ img{
     object-fit: cover;
 }
 .span{
-    color: #f6d427;
+    color: #fbfaf6;
 }
 p{
     font-weight: lighter;
@@ -39,7 +39,7 @@ p{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image: linear-gradient(45deg,rgba(0, 0, 0, 0.632),rgba(42, 42, 42, 0.547)),url('../../imagem/foto-3.jpg');
+    background-image: linear-gradient(45deg,rgba(0, 0, 0, 0),rgba(42, 42, 42, 0.11)),url('../../imagem/BG.jpg');
     background-position: center;
     background-size: cover;
 }
@@ -102,7 +102,7 @@ p{
 }
 .container .contentHeader h1{
     padding: var(--padding-button);
-    font-size: clamp(1.8em,2.5vw,8em);
+    font-size: clamp(2.8em,2.5vw,8em);
 }
 .container .navgatior .menu-burguer{
     padding-right: var(--padding-spacing);
@@ -141,7 +141,7 @@ p{
     flex-direction: column;
     width: 3em;
     height: 3px;
-    margin: 0 12px;
+    margin-right: 15px;
     background-color: var(--color-text-blue);
 }
 .content .container-action .abouts-container h2{
@@ -199,7 +199,7 @@ p{
     flex-direction: column;
     width: 3em;
     height: 3px;
-    margin: 0 12px;
+    margin-right: 15px; 
     background-color: var(--color-texte-yellow);
 }
 .content .container-action .features-container h2{
@@ -256,7 +256,7 @@ p{
     flex-direction: column;
     width: 3em;
     height: 3px;
-    margin: 0 12px;
+    margin-right: 15px;
     background-color: var(--color-text-purple);
 }
 .content .container-action .desing-container h2{
